# docksmith

./: CMakeLists.txt  README.md  commands.txt  docksmith  setup_ubuntu.sh
docs/: VALIDATION.md
include/: build_engine.h  cache_engine.h  dockerfile_parser.h  docksmith_types.h  errors.h  layer_engine.h  manifest.h  runtime_engine.h  state_store.h  utils.h
sample-app/: Docksmithfile  message.txt
src/: build_engine.cpp  cache_engine.cpp  dockerfile_parser.cpp  layer_engine.cpp  main.cpp  runtime_engine.cpp  state_store.cpp  utils.cpp
